--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "public": true,
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!images/).*)",
       "destination": "/index.html"
     }
   ],
