--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,22 @@
   "outputDirectory": "dist",
   "rewrites": [
     {
-      "source": "/((?!images/).*)",
+      "source": "/((?!images/|favicon).*)",
       "destination": "/index.html"
     }
   ],
   "headers": [
     {
       "source": "/images/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/favicon.ico",
       "headers": [
         {
           "key": "Cache-Control",
